samples/_failures_safe/1761396819_54d76e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93417a75.c: In function ‘main’:
./samples/SAFE/__tmp_93417a75.c:139:11: error: expected ‘;’ at end of input
  139 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_93417a75.c:139:5: error: expected declaration or statement at end of input
  139 |     printf
      |     ^~~~~~
